[package]
name = "tokio-quic"
version = "0.1.0"
authors = ["cauvmou <cauvmou.8855@gmail.com>", "quininer <quininer@live.com>"]
edition = "2021"

[dependencies]
log = "^0.4"
rand = "^0.8"
ring = "^0.16.20"
smallvec = "^1.10"
tokio = { version = "1", features = ["full"] }
tokio-timer = "^0.2"
quiche = { version = "0.18", features = ["boringssl-boring-crate"] }
boring = { version = "3.1", optional = true }
pollster = "^0.3.0"
rust-crypto = "^0.2"
chrono = "^0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
simple_logger = "^4.2"

[build-dependencies]
boring = "3.1.0"

[features]
key-gen = ["dep:boring"]

[[example]]
name="server"
required-features=["key-gen"]

[[example]]
name="client"
required-features=["key-gen"]