[package]
name = "tokio-quicker"
description = "A easy-to-use quic library for tokio."
homepage = "https://github.com/cauvmou/tokio-quicker"
documentation = "https://docs.rs/tokio-quicker/latest/tokio_quicker/"
readme = "README.md"
keywords = ["quic", "tokio", "async"]
categories = ["network-programming"]
license = "MIT"
version = "0.0.2"
authors = ["cauvmou <cauvmou.8855@gmail.com>"]
edition = "2021"

[dependencies]
log = "^0.4"
rand = "^0.8"
ring = "^0.17.7"
smallvec = "^1.13"
tokio = { version = "1", features = ["full"] }
tokio-timer = "^0.2"
quiche = { version = "0.20", features = ["boringssl-boring-crate"] }
boring = { version = "4.4.0", optional = true }
pollster = "^0.3.0"
rust-crypto = "^0.2"
chrono = "^0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
simple_logger = "^4.3"

[build-dependencies]
boring = "4.4.0"

[features]
key-gen = ["dep:boring"]

[[example]]
name="server"
required-features=["key-gen"]

[[example]]
name="client"
required-features=["key-gen"]
